k8s-ingress-404-503/manifests/90-bad-service-wrong-targetport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc-bad
  namespace: demo
spec:
  selector:
    app: demo
  ports:
    - name: http
      port: 80
      targetPort: 9999
  type: ClusterIP
