k8s-ingress-404-503/manifests/91-bad-ingress-wrong-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-bad
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: wrong.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-svc
                port:
                  number: 80
